popular tags not fit screen bug fixed

--- a/client/components/layout/extra/extra.module.css
+++ b/client/components/layout/extra/extra.module.css
@@ -16,3 +16,8 @@
     margin-bottom: 1em;
   }
 }
+
+.popularTags {
+  display: grid;
+  grid-template-columns: auto auto;
+}
